Added quarter circles

--- a/index.html
+++ b/index.html
@@ -1,8 +1,35 @@
-<link rel=¨stylesheet¨ type=¨text/css¨ href="style.css">
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <title>Quarter Circle - Fighting Game Notations For Dummies!</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel=¨stylesheet¨ type=¨text/css¨ href="style.css">
+    
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We"
+      crossorigin="anonymous"
+    />
+    <script src="https://kit.fontawesome.com/4b3dad3b33.js" crossorigin="anonymous"></script>
+  </head>
+  <body>
+    <div class="jumbotron text-center">
+      <h1>Paste or Type Your Combo Below</h1>
+    </div>
 
-<body>
-
-<textarea></textarea>
-<div id="output"></div>
-<script src="app.js"></script>
-</body>
+    <div class="container">
+      <div class="row">
+        <textarea></textarea>
+        <div id="output"></div>
+        <script
+          src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
+          integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
+          crossorigin="anonymous"
+        ></script>
+        <script src="app.js"></script>
+      </div>
+    </div>
+  </body>
+</html>
